--- a/CleanArchitecture.WebApi-master/WebApi/WebApi.csproj
+++ b/CleanArchitecture.WebApi-master/WebApi/WebApi.csproj
@@ -35,6 +35,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.1.2" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNet.Cors" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,5 +52,7 @@
     <None Remove="NLog.Web.AspNetCore" />
     <None Remove="Serilog.Sinks.File" />
     <None Remove="Serilog.Formatting.Compact" />
+    <None Remove="Microsoft.AspNetCore.Cors" />
+    <None Remove="Microsoft.AspNet.Cors" />
   </ItemGroup>
 </Project>
