--- a/front-end-coreui/package.json
+++ b/front-end-coreui/package.json
@@ -17,7 +17,6 @@
     "build:n17": "react-scripts --openssl-legacy-provider build",
     "changelog": "auto-changelog --starting-version 4.1.0 --commit-limit false --hide-credit",
     "eject": "react-scripts eject",
-   
     "start": "react-scripts start",
     "start:n17": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test",
@@ -35,7 +34,9 @@
     "@coreui/react": "^4.1.0",
     "@coreui/react-chartjs": "^2.0.0",
     "@coreui/utils": "^1.3.1",
+    "@mui/material": "^5.2.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "classnames": "^2.3.1",
