--- a/coreui-free-react-admin-template-main/package.json
+++ b/coreui-free-react-admin-template-main/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.1.0",
     "redux": "4.1.2",
     "simplebar-react": "^2.3.6"
   },
