--- a/CleanArchitecture.WebApi-master/WebApi/appsettings.json
+++ b/CleanArchitecture.WebApi-master/WebApi/appsettings.json
@@ -1,12 +1,12 @@
 {
   "UseInMemoryDatabase": false,
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=CleanArchitectureApplicationDb;User Id=sa;Password=Password789;",
-        "IdentityConnection": "Server=localhost,1433;Database=identityDb;User Id=sa;Password=Password789;",
-        "LangCodeApiConnection": "Server=localhost,1433;Database=LangCodeApi;User Id=sa;Password=Password789;"
-        
-        
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-6KEH9O9;Database=CleanArchitectureApplicationDb;User Id=sa;Password=123;",
+    "IdentityConnection": "Server=DESKTOP-6KEH9O9;Database=IdentityDb;User Id=sa;Password=123;",
+    "LangCodeApiConnection": "Server=DESKTOP-6KEH9O9;Database=LangCodeApi;User Id=sa;Password=123;"
+
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -25,10 +25,10 @@
         },
         {
             "Name": "MSSqlServer",
-            "Args": {
-                "connectionString": "Data Source=localhost,1433;Database=logDb;User Id=sa;Password=Password789;",
-                "tableName": "Log"
-            }
+          "Args": {
+            "connectionString": "Data Source=DESKTOP-6KEH9O9;Database=logDb;User Id=sa;Password=123;",
+            "tableName": "Log"
+          }
         }
 
 
